syntax = "proto3";

package go_package;

option go_package="sample/proto";


message SampleMessage {
  int32 id = 1;
  string name = 2;
}

message UserDetails {
    int32 id = 1;
    string name = 2;
  }

service AvailableServices{
    rpc GetUserDetail(SampleMessage) returns (UserDetails);
}
